hphp/hack/test/typecheck/stdclass_strict.php.exp
File "stdclass_strict.php", line 9, characters 7-9:
No property 'foo' in stdClass (Typing[4053])
File "stdclass_strict.php", line 8, characters 12-19:
This is why I think it is an object of type stdClass
File "classes.hhi", line 30, characters 13-20:
Declaration of stdClass is here
